# face-detect-recog

./: .gitignore  README.md  pyproject.toml  requirements.txt
face-detect-recog/: dlib_embeddings_cache.pkl  face_encodings_cache.pkl  facenet_embeddings_cache.pkl  facerec_from_webcam_multiprocessing.py  img_Face_recognition.py  real_time_face_recog.py  real_time_face_recog_dlib.py  real_time_face_recog_facenet.py  real_time_face_recog_facenet_accessory.py  real_time_face_recog_mediapipe.py
