[tool.poetry]
name = "face-detect-recog"
version = "0.1.0"
description = ""
authors = ["Soham Waghmare <102748742+sohamw03@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
opencv-python = "^4.10.0.84"
dlib = {path = "dlib-19.24.1-cp311-cp311-win_amd64.whl"}
face-recognition = "^1.3.0"
numpy = "1.26.4"
cv2-enumerate-cameras = "^1.1.17"
pandas = "^2.2.3"
tqdm = "^4.67.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.16.2"
mtcnn = "^1.0.0"
keras-facenet = "^0.3.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false