[tool.poetry]
name = "face-detect-recog"
version = "0.1.0"
description = ""
authors = ["Soham Waghmare <102748742+sohamw03@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
absl-py = "2.1.0"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.10.11"
aiohttp-retry = "2.8.3"
aioice = "0.9.0"
aiortc = "1.9.0"
aiosignal = "1.3.1"
aiosqlite = "0.20.0"
annotated-types = "0.7.0"
anthropic = "0.34.2"
anyio = "4.6.2.post1"
APScheduler = "3.11.0"
astunparse = "1.6.3"
asyncua = "1.1.5"
attrs = "24.2.0"
av = "12.3.0"
backoff = "2.2.1"
boto3 = "1.35.60"
botocore = "1.35.71"
cachetools = "5.5.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
click = "8.1.7"
colorama = "0.4.6"
coloredlogs = "15.0.1"
commonmark = "0.9.1"
contourpy = "1.3.1"
cryptography = "44.0.0"
cv2_enumerate_cameras = "1.1.17"
cycler = "0.12.1"
Cython = "3.0.11"
dataclasses-json = "0.6.7"
defusedxml = "0.7.1"
distro = "1.9.0"
dlib = {path = "dlib-19.24.1-cp311-cp311-win_amd64.whl", sha256 = "6f1a5ee167975d7952b28e0ce4495f1d9a77644761cf5720fb66d7c6188ae496"}
dnspython = "2.7.0"
docker = "7.1.0"
face-recognition = "1.3.0"
face_recognition_models = "0.3.0"
fastapi = "0.110.3"
filelock = "3.16.1"
filetype = "1.2.0"
flatbuffers = "24.3.25"
fonttools = "4.55.0"
frozenlist = "1.5.0"
fsspec = "2024.10.0"
gast = "0.4.0"
google-auth = "2.36.0"
google-auth-oauthlib = "1.0.0"
google-crc32c = "1.6.0"
google-pasta = "0.2.0"
GPUtil = "1.4.0"
grpcio = "1.68.0"
h11 = "0.14.0"
h5py = "3.12.1"
httpcore = "1.0.7"
httpx = "0.25.2"
huggingface-hub = "0.26.3"
humanfriendly = "10.0"
idna = "3.7"
ifaddr = "0.2.0"
imageio = "2.36.1"
inference = "0.29.0"
iniconfig = "2.0.0"
jax = "0.4.34"
jaxlib = "0.4.34"
Jinja2 = "3.1.4"
jiter = "0.8.0"
jmespath = "1.0.1"
joblib = "1.4.2"
keras = "2.13.1"
keras-facenet = "0.3.2"
kiwisolver = "1.4.7"
lazy_loader = "0.4"
libclang = "18.1.1"
lz4 = "4.3.3"
Markdown = "3.7"
markdown-it-py = "3.0.0"
MarkupSafe = "3.0.2"
marshmallow = "3.23.1"
matplotlib = "3.9.3"
mdurl = "0.1.2"
mediapipe = "0.10.18"
ml-dtypes = "0.4.1"
mpmath = "1.3.0"
mtcnn = "1.0.0"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
namex = "0.0.8"
networkx = "3.4.2"
numpy = "1.24.3"
nvidia-cublas-cu12 = "12.5.3.2"
nvidia-cuda-cupti-cu12 = "12.5.82"
nvidia-cuda-nvcc-cu12 = "12.5.82"
nvidia-cuda-nvrtc-cu12 = "12.5.82"
nvidia-cuda-runtime-cu12 = "12.5.82"
nvidia-cusparse-cu12 = "12.5.1.3"
nvidia-nvjitlink-cu12 = "12.5.82"
oauthlib = "3.2.2"
onnxruntime = "1.19.2"
openai = "1.55.3"
opencv-contrib-python = "4.10.0.84"
opencv-python = "4.10.0.84"
opencv-python-headless = "4.10.0.84"
opt_einsum = "3.4.0"
optree = "0.13.1"
packaging = "24.2"
pandas = "2.2.3"
piexif = "1.1.3"
pillow = "10.4.0"
pluggy = "1.5.0"
prometheus-fastapi-instrumentator = "6.0.0"
prometheus_client = "0.21.0"
propcache = "0.2.0"
protobuf = "4.25.5"
psutil = "6.1.0"
py-cpuinfo = "9.0.0"
pyasn1 = "0.6.1"
pyasn1_modules = "0.4.1"
pybase64 = "1.0.2"
pycparser = "2.22"
pydantic = "2.10.2"
pydantic-settings = "2.6.1"
pydantic_core = "2.27.1"
pydot = "2.0.0"
pyee = "12.1.1"
Pygments = "2.18.0"
PyJWT = "2.10.1"
pylibsrtp = "0.10.0"
pyOpenSSL = "24.3.0"
pyparsing = "3.2.0"
pyreadline3 = "3.5.4"
pytest = "8.3.3"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
pywin32 = "308"
PyYAML = "6.0.2"
redis = "5.0.8"
requests = "2.32.3"
requests-file = "2.1.0"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
rich = "13.0.1"
rsa = "4.9"
s3transfer = "0.10.4"
scikit-image = "0.24.0"
scikit-learn = "1.5.2"
scipy = "1.14.1"
seaborn = "0.13.2"
sentencepiece = "0.2.0"
shapely = "2.0.6"
shellingham = "1.5.4"
six = "1.16.0"
slack_sdk = "3.33.4"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
sounddevice = "0.5.1"
starlette = "0.37.2"
structlog = "24.4.0"
supervision = "0.22.0"
sympy = "1.13.1"
tensorboard = "2.13.0"
tensorboard-data-server = "0.7.2"
tensorflow = "2.13.1"
tensorflow-estimator = "2.13.0"
tensorflow-intel = "2.13.1"
tensorflow-io-gcs-filesystem = "0.31.0"
termcolor = "2.5.0"
threadpoolctl = "3.5.0"
tifffile = "2024.9.20"
tldextract = "5.1.3"
tokenizers = "0.20.3"
torch = "2.1.2"
torchvision = "0.16.2"
tqdm = "4.67.0"
twilio = "9.3.7"
typer = "0.12.5"
typing-inspect = "0.9.0"
typing_extensions = "4.12.2"
tzdata = "2024.2"
tzlocal = "5.2"
ultralytics = "8.3.39"
ultralytics-thop = "2.0.12"
urllib3 = "2.2.3"
Werkzeug = "3.1.3"
wrapt = "1.17.0"
yarl = "1.18.0"
zxing-cpp = "2.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"