[project]
name = "face-detect-recog"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cv2-enumerate-cameras>=1.1.18.3",
    "dlib",
    "face-recognition>=1.3.0",
    "mediapipe>=0.10.21",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "setuptools>=78.1.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
dlib = { path = "dlib-19.24.1-cp311-cp311-win_amd64.whl" }
